# ChangeLog for net-im/psimedia
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Oct 2010; Rion <rion4ik@gmail.com> psimedia-9999.ebuild:
  fix QA
