@@ -1,3 +1,3 @@
-EBUILD psimedia-9999.ebuild 1172 RMD160 62e9b3d5efadf3eac7b008c86096311de01ec63e SHA1 473e37932974682c6503bd033b1555f63fded87d SHA256 4ccb50798ca0b5bd983ed0d5a87ecc11f173f6f8f3d0a0019c8c2ffb7590206f
-MISC ChangeLog 188 RMD160 4937d40f6b83cdcaabb963ddf29653e8a299d3f5 SHA1 04ed9a3a6e018124acb9e67599b8528449826952 SHA256 b487df7faec4eb8eb26cf5e203383ce04a23ff44b278404443649b209cbd4507
+EBUILD psimedia-9999.ebuild 1310 RMD160 49a75155a3ff17b4a6ebcc3b1e4d2e563db9dca0 SHA1 43483fb1113b9fa7fc8e6dbaa28b7b29babffc3b SHA256 d7afe86802dafe6ea2971eded98d277f6de98bc02edfe6991218ccb33980c45b
+MISC ChangeLog 283 RMD160 5051c739df795538b9e6ff239b74687b3894d4a2 SHA1 a3bf93b794fbdc50f0a179bc2afde7a6e6e92822 SHA256 c90a10784808a41f9c4c20dcb413bb9fcaadab0c92e3f94ebf0d4486be3b1574
 MISC metadata.xml 360 RMD160 bc9d362ca3ab206e17bff256d9499362fee96eb8 SHA1 17fbbea892f5c4b7405d8dfc7c7640ea3efab44f SHA256 cc525d04ecb16b93ee0ad3c9d1e0f157599020d575a88d0884ed6b5e215063e5
