@@ -1,6 +1,9 @@
 # ChangeLog for net-im/psimedia
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  18 Jan 2011; Rion <rion4ik@gmail.com> psimedia-9999.ebuild:
+  fix install path for psi-plus
 
   11 Oct 2010; Rion <rion4ik@gmail.com> psimedia-9999.ebuild:
   fix QA
